[package]
name = "2048_gui"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@mail.com>",
			"Jonathan Light <jonathan-a-light@uiowa.edu"]

[dependencies]
lib_2048 = { git = "https://bitbucket.org/AdrienChampion/rust_2048.git", rev = "3791048" }
piston = "0.19.0"
piston2d-graphics = "0.16.0"
pistoncore-glutin_window = "0.23.0"
piston2d-opengl_graphics = "0.26.0"

