[package]
name = "2048_gui"
version = "0.1.0"
authors = ["Jon, Jon, Natasha"]

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"

[dependencies]
lib_2048 = { git = "https://bitbucket.org/AdrienChampion/rust_2048.git", rev = "3791048" }
ansi_term = "*"
rand = "*"
conrod = "*"

piston_window = "*"

daggy = "0.4.0"
pistoncore-input = "0.9.0"
piston2d-graphics = "0.16.0"
num = "0.1.30"
time = "0.1.34"
vecmath = "0.2.0"
image = "0.9.0"

[dev-dependencies]
find_folder = "0.3.0"
